WICKETPIXIE CHANGELOG

v1.4 - TBA (alpha - April 2, 2011)
 * FEATURE: Custom 404 code
 * CHANGE: Lots! Please read UPGRADING file!
 * CHANGE: Condensed ALL custom code options in one admin page
 * PERFORMANCE: Smaller, simpler code, occupies less space, potentially faster
 * FIXED: Some bugs along the way
 * PLUGIN: Some WiPi plugins were removed (more info in UPGRADING file)
 * REMOVED: Images used for layout prior to the fork

v1.3.2 - March 26, 2011
 * UPDATED: Documentation
 * ADDED: Old comments style with modern comments function
 * CHANGE: Home sidebar in its own template
 * CHANGE: Home sidebar uses as many built-in WordPress widgets as posible
 * CHANGE: Tables in Activity Stream replaced with divs
 * FIXED: Some text layout bugs (such as growing nested li)
 * REMOVED: Old comments chunk for WordPress pre-2.7 (2.8 required, anyways)

v1.3.1 - March 24, 2011
 * FIXED: i18n issues in the Activity Stream
 * FIXED: Activity Stream times now adjust to WordPress settings (instead of GMT)
 * ADDED: Facebook Social Badge (icon stolen from Chris Pirillo, sorry)
 * ADDED: Opera beta gradients (CSS now 100% compatible with Opera)

v1.3 - March 17, 2011
 * Maintenance fork
 * FEATURE: Custom nav menus
 * FEATURE: WordPress custom backgrounds
 * FEATURE: Threaded comments
 * FEATURE: Support for i18n (with template and Spanish translation)
 * PERFORMANCE: changed all images with CSS3 (100% Webkit and Gecko compatible)

------------------

Legacy WicketPixie

v1.2 RC5 - October 13, 2009
 * FEATURE: AdSense for Search functionality.
 * FEATURE: Check out all the performance changes. ;-)
 * CHANGE: Add AdSense ads via code instead of ad ids.
 * PERFORMANCE: CSS Tweaks speed up page load times tremendously.
 * PERFORMANCE: New AdminPage class written from scratch in hopes of better
 admin pages overall.
 * PERFORMANCE: Switched back to using WordPress' database functions for
 storing settings.
 * PERFORMANCE: Using the SimplePie library included with WordPress.