@@ -19,9 +19,8 @@ If any bugs were to be found, please report them in the fork's code repositoty b
 
 REQUIREMENTS
 
-This theme was designed for WordPress 3.0+ and PHP5. It might work (to some extent)
-with previous WordPress versions, but requires at least 2.8. However, we recommend
-that you use the latest versions available. At the time of writing,
+This theme was designed for (and requires) WordPress 3.0+ and PHP5. However,
+we recommend that you use the latest versions available. At the time of writing,
 the latest WordPress is 3.1, and the latest PHP is 5.3.5.
 
 INSTALLING
