@@ -10,56 +10,28 @@
  *
  * Licensed under the New BSD License.
  */
-$theme_background = array (
-	array(  
-		"name" => "Background Color",
-		"description" => "The color that fills the screen around the content area.",
-		"id" => 'wicketpixie_theme_body_bg_color',
-		"std" => "#270b05",
-		"type" => "text"),
-	array(  
-		"name" => "Background Image",
-		"description" => "Optional background image.",
-		"id" => 'wicketpixie_theme_body_bg_image',
-		"std" => "solidwood-dark.jpg",
-		"type" => "file"),
-	array(  
-		"name" => "Background Image Repeat",
-		"description" => "Specify how you would like the background image positioned.",
-		"id" => 'wicketpixie_theme_body_bg_repeat',
-		"std" => "repeat-x",
-		"type" => "select",
-		"options" => array("no-repeat", "repeat", "repeat-x", "repeat-y")),
-	array(  
-		"name" => "Background Image Position",
-		"description" => "Have the background scroll with the page, or stay in one place.",
-		"id" => 'wicketpixie_theme_body_bg_position',
-		"std" => "fixed",
-		"type" => "select",
-		"options" => array("fixed", "scroll")),
-);
 $theme_options = array (
-	array(  
+	array(
 		"name" => "Body Font Family",
 		"description" => "The main font used through-out the content areas.",
 		"id" => 'wicketpixie_theme_body_font',
 		"std" => "Lucida Grande, Arial, Verdana, sans-serif",
 		"type" => "select",
 		"options" => array("Lucida Grande, Arial, Verdana, sans-serif", "Helvetica, Arial, Verdana, sans-serif", "Arial, Verdana, sans-serif", "Verdana, Arial sans-serif", "Georgia, Times New Roman, Times, serif", "Times New Roman, Georgia, Times, serif", "Times, Times New Roman, Georgia, serif")),
-	array(  
+	array(
 		"name" => "Headings Font Family",
 		"description" => "The font used for post titles, section headings and the logo.",
 		"id" => 'wicketpixie_theme_headings_font',
 		"std" => "Georgia, Times New Roman, Times, serif",
 		"type" => "select",
 		"options" => array("Georgia, Times New Roman, Times, serif", "Times New Roman, Georgia, Times, serif", "Times, Times New Roman, Georgia, serif", "Lucida Grande, Arial, Verdana, sans-serif", "Helvetica, Arial, Verdana, sans-serif", "Arial, Verdana, sans-serif", "Verdana, Arial sans-serif")),
-	array(  
+	array(
 		"name" => "Header Font Size",
 		"description" => "The font size of the header logo, in px.",
 		"id" => 'wicketpixie_theme_header_size',
 		"std" => "40",
 		"type" => "text"),
-	array(  
+	array(
 		"name" => "Logo Text Color",
 		"description" => "The color of the logo text.",
 		"id" => 'wicketpixie_theme_logo_color',
@@ -71,25 +43,25 @@ $theme_options = array (
 		"id" => 'wicketpixie_theme_description_color',
 		"std" => "#9e6839",
 		"type" => "text"),
-	array(  
+	array(
 		"name" => "Titles/Content Headings Color",
 		"description" => "The color of post titles and headings in the content area.",
 		"id" => 'wicketpixie_theme_titles_color',
 		"std" => "#b64926",
 		"type" => "text"),
-	array(  
+	array(
 		"name" => "Sidebar Headings Color",
 		"description" => "The color of headings in the sidebar.",
 		"id" => 'wicketpixie_theme_sidebar_headings_color',
 		"std" => "#8e2800",
 		"type" => "text"),
-	array(  
+	array(
 		"name" => "Content Links Color",
 		"description" => "The color of links in the content area (main column).",
 		"id" => 'wicketpixie_theme_content_links_color',
 		"std" => "#8e2800",
 		"type" => "text"),
-	array(  
+	array(
 		"name" => "Sidebar Links Color",
 		"description" => "The color of links in the sidebar.",
 		"id" => 'wicketpixie_theme_sidebar_links_color',
@@ -102,9 +74,6 @@ $theme_options = array (
 		"std" => "340",
 		"type" => "text")
 );
-if (!function_exists('add_custom_background')) :
-	$theme_options = array_merge($theme_background, $theme_options);
-endif;
 class ThemeOptions extends AdminPage {
 	function __construct() {
 		parent::__construct('Theme Options','theme-options.php','wicketpixie-admin.php',array($GLOBALS['theme_options']));
@@ -128,64 +97,6 @@ class ThemeOptions extends AdminPage {
 			wp_redirect($_SERVER['PHP_SELF'] ."?page=".$this->filename."&reset=true");
 		endif;
 	}
-	function save_hook() {
-		if ( $_POST['completed'] == 'true' && $_FILES['wicketpixie_theme_body_bg_image']['tmp_name'] != '' ) :
-			$new_name= $_FILES['wicketpixie_theme_body_bg_image']['name'];
-			$new_home= TEMPLATEPATH . '/images/backgrounds/' . $new_name;
-			if( move_uploaded_file( $_FILES['wicketpixie_theme_body_bg_image']['tmp_name'], $new_home ) ) :
-				update_option('wicketpixie_theme_body_bg_image',$new_name);
-			else :
-				error_log( 'No joy, no uploaded file' );
-			endif;
-		endif;
-		if ( $_POST['saved_images'] != '' ) :
-			update_option('wicketpixie_theme_body_bg_image',$_POST['saved_images']);
-		endif;
-	}
-	function extra_types_html($value,$checkdata) {
-		if( $value['type'] == 'file' ) :
-			$image_check= get_option('wicketpixie_theme_body_bg_image');
-			if( isset( $image_check ) && $image_check != '' ) :
-				$image_check= get_option('wicketpixie_theme_body_bg_image');
-			else :
-				$image_check= 'false';
-			endif;
-			if( get_option($value['id'] ) ) : ?>
-				<input type="hidden" name="<?php echo $value['id']; ?>" value="<?php echo get_option($value['id'] ); ?>">
-			<?php endif;
-			$uploaded= opendir( TEMPLATEPATH .'/images/backgrounds/' );
-			$images= array();
-			while ( $file= readdir( $uploaded ) ) :
-				$pattern = "/[\"‘]?([^\"’]?.*(png|jpg|gif))[\"’]?/i";
-				if( preg_match($pattern, $file ) ) :
-					$images[]= $file;
-				endif;
-			endwhile; ?>
-			<select name="saved_images" id="saved_images">
-			<option value="">Choose an image</option>
-			<?php foreach( $images as $image ) : ?>
-				<option value="<?php echo $image; ?>" <?php if(get_option('wicketpixie_theme_body_bg_image') == $image) echo 'selected="selected"'; ?>><?php echo $image; ?></option>
-			<?php endforeach; ?>
-				</select> Current:
-			<?php if( $image_check== 'false' ) :
-				echo 'None';
-			elseif( $image_check != 'false' ) : ?>
-				<a href="<?php echo TEMPLATEPATH .'/images/backgrounds/'. get_option($value['id']); ?>" title="<?php echo get_option($value['id']); ?>"><?php echo get_option($value['id']); ?></a>
-			<?php else :
-				echo 'None'; 
-			endif;?>
-			<p><input type="file" id="<?php echo $value['id']; ?>" name="<?php echo $value['id']; ?>">
-				<input type="hidden" name="MAX_FILE_SIZE" value="1500000">
-				<input type="hidden" name="completed" value="true"></p>
-			<p><input type="checkbox" value="<?php echo get_option('wicketpixie_theme_no_image'); ?>" name="wicketpixie_theme_no_image" <?php if(get_option('wicketpixie_theme_no_image') == 'true') : echo 'checked="checked"'; else : echo ''; endif; ?>> No Background Image</p>
-	<?php else :
-		parent::extra_types_html($value,$checkdata);
-	endif;
-	}
-	function __destruct() {
-		parent::__destruct();
-		unset($GLOBALS['theme_options']);
-	}
 }
 function wicketpixie_wp_head() {
 	global $theme_options;
@@ -195,15 +106,9 @@ function wicketpixie_wp_head() {
 		else :
 			$$value['id'] = get_option($value['id']); 
 		endif;
-	endforeach;
-	$image_check= get_option('wicketpixie_theme_body_bg_image');
-	if( isset( $image_check ) && $image_check != '' ) :
-		$image_check= get_option('wicketpixie_theme_body_bg_image');
-	else :
-		$image_check= 'false';
-	endif; ?>
+	endforeach; ?>
 	<style type="text/css">
-		body { font-family: <?php echo $wicketpixie_theme_body_font; ?>; <?php if (!function_exists('add_custom_background')) : ?>background: <?php echo $wicketpixie_theme_body_bg_color; if( get_option('wicketpixie_theme_no_image') != 'true' ) : ?> url("<?php bloginfo('template_directory'); ?>/images/backgrounds/<?php echo $wicketpixie_theme_body_bg_image; ?>") <?php echo $wicketpixie_theme_body_bg_position; ?> <?php echo $wicketpixie_theme_body_bg_repeat; ?> 50% 0<?php endif; endif; ?>; }
+		body { font-family: <?php echo $wicketpixie_theme_body_font; ?>; }
 		#logo { font-family: <?php echo $wicketpixie_theme_headings_font; ?>; color: <?php echo $wicketpixie_theme_logo_color; ?>; }
 		#logo a:link, #logo a:visited, #logo a:active { color: <?php echo $wicketpixie_theme_logo_color; ?>; }
 		#logo a:hover { color: #fff; }
